--- a/templates/score.html
+++ b/templates/score.html
@@ -69,15 +69,15 @@
             }
             let waitString = ""
             if (json.time_secs / 60 > 1) {
-              waitString = `${parseInt(json.time_secs / 60)} minutes`
+              waitString = `Order awaits confirmation. ${parseInt(json.time_secs / 60)} minutes have passed`
             } else {
-              waitString = `${json.time_secs} seconds`
+              waitString = `Order awaits confirmation. ${json.time_secs} seconds have passed`
             }
             messageElement.textContent = waitString
           }
 
-          confirmedElement.textContent = parseInt(json.confirmed_today)
-          unconfirmedElement.textContent = parseInt(json.total_uncomfirmed)
+          confirmedElement.textContent = `Orders confirmed today: ${parseInt(json.confirmed_today)}`
+          unconfirmedElement.textContent = `Unconfirmed orders total: ${parseInt(json.total_uncomfirmed)}`
         })
         .catch(err => console.log(err))
     }
