--- a/templates/score.html
+++ b/templates/score.html
@@ -18,20 +18,16 @@
     crossorigin="anonymous">
 
   <style>
-    .default {
-      color: black;
-    }
-
     .low {
-      color: green;
+      color: #5cb85c;
     }
 
     .medium {
-      color: yellow;
+      color: #f0ad4e;
     }
 
     .high {
-      color: red;
+      color: #d9534f;
     }
   </style>
 
@@ -40,9 +36,9 @@
 <body>
 
   <div class="container">
-    <h1 id="message" class="default"></h1>
-    <h3 id="confirmed"></h3>
-    <h3 id="unconfirmed"></h3>
+    <h1 id="message" class="text-center" style="padding-top: 25px;"></h1>
+    <h4 id="confirmed" class="text-center"></h4>
+    <h4 id="unconfirmed" class="text-center"></h4>
   </div><!-- /.container -->
 
   <script>
@@ -56,22 +52,24 @@
         .then(response => response.json())
         .then(json => {
           if (json.time_secs === null) {
-            messageElement.className = "default"
+            messageElement.className = "text-center"
             messageElement.textContent = "All orders have been confirmed"
           } else {
-            let className = ""
             if (json.time_secs / 60 <= 7) {
               messageElement.className = "low"
+              messageElement.classList.add("text-center")
             } else if (json.time_secs / 60 <= 30) {
               messageElement.className = "medium"
+              messageElement.classList.add("text-center")
             } else {
               messageElement.className = "high"
+              messageElement.classList.add("text-center")
             }
             let waitString = ""
             if (json.time_secs / 60 > 1) {
-              waitString = `Order awaits confirmation. ${parseInt(json.time_secs / 60)} minutes have passed`
+              waitString = `Order awaits confirmation for ${parseInt(json.time_secs / 60)} minutes`
             } else {
-              waitString = `Order awaits confirmation. ${json.time_secs} seconds have passed`
+              waitString = `Order awaits confirmation for ${json.time_secs} seconds`
             }
             messageElement.textContent = waitString
           }
