--- a/templates/score.html
+++ b/templates/score.html
@@ -8,6 +8,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="Score">
   <meta name="author" content="">
+  <meta name="robots" content="noindex">
   <link rel="icon" href="favicon.ico">
 
   <title>Score</title>
